# routes/auth.route.js
@@ -12,4 +12,5 @@ router.post("/forgot-password", authController.forgotPassword);
 router.post("/reset-password", authController.resetPassword);
 router.get("/google", googleController.redirectAuth);
 router.get("/google/callback", googleController.googleCallback);
+router.post("/refresh-token", authController.refreshToken);
 module.exports = router;
